--- a/src/main/resources/templates/signup/signup.html
+++ b/src/main/resources/templates/signup/signup.html
@@ -2,46 +2,75 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body>
+<section class="align-content-center mt-4">
+    <h1 class="text-center">Create Account</h1>
+    <form method="post" class="container-fluid pt-4">
 
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">Username:</label>
+                    <input type="text" class="form-control col-9" th:field="${user.userName}">
+                </div>
+                <span th:errors="${user.userName}" class="row text-danger justify-content-end "></span>
+            </div>
+        </div>
 
-<section>
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">First Name:</label>
+                    <input type="text" class="form-control col-9" th:field="${user.firstName}">
+                </div>
+                <span th:errors="${user.firstName}" class="row text-danger justify-content-end "></span>
+            </div>
+        </div>
 
-    <h1>Create Account</h1>
-    <form method="post">
-        <div class="form-group">
-            <label>Username</label>
-            <input type="text" class="form-control" th:field="${user.userName}">
-            <span th:errors="${user.userName}" class="error"></span>
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">Last Name:</label>
+                    <input type="text" class="form-control col-9" th:field="${user.lastName}">
+                </div>
+                <span th:errors="${user.lastName}" class="row text-danger justify-content-end "></span>
+            </div>
         </div>
-        <div class="form-group">
-            <label>First Name: </label>
-            <input type="text" class="form-control" th:field="${user.firstName}">
-            <span th:errors="${user.firstName}" class="error"></span>
+
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">Email:</label>
+                    <input type="text" class="form-control col-9" th:field="${user.email}">
+                </div>
+                <span th:errors="${user.email}" class="row text-danger justify-content-end "></span>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Last Name: </label>
-            <input type="text" class="form-control" th:field="${user.lastName}">
-            <span th:errors="${user.lastName}" class="error"></span>
+
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">Password:</label>
+                    <input type="password" class="form-control col-9" th:field="${user.password}">
+                </div>
+                <span th:errors="${user.password}" class="row text-danger justify-content-end "></span>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" th:field="${user.email}">
-            <span th:errors="${user.email}" class="error"></span>
+
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-4">Repeat Password:</label>
+                    <input type="password" class="form-control col-8" th:field="${user.verifyPassword}">
+                </div>
+                <span th:text="${errorMessage}" class="row text-danger  justify-content-end "></span>
+                <span th:errors="${user.verifyPassword}" class="row text-danger justify-content-end "></span>
+            </div>
         </div>
-        <div class="form-group">
-            <label>Password: </label>
-            <input type="text" class="form-control" th:field="${user.password}">
-            <span th:errors="${user.password}" class="error"></span>
-        </div>
-        <div class="form-group">
-            <label>Repeat Password: </label>
-            <input type="text" name="verify" class="form-control" th:field="${user.verifyPassword}">
-            <span th:errors="${user.verifyPassword}" class="error"></span>
-            <span th:text="${errorMessage}" class="error"></span>
-        </div>
-        <div class="form-group">
+
+        <div class="row form-group justify-content-center">
             <input class="btn btn-success" type="submit" value="Create Account"/>
         </div>
+
     </form>
 
 </section>
