constant used to assign page title on every mapping method

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments :: head"></head>
 <body>
 <section class="align-content-center mt-4">
-    <h1 class="text-center">Create Account</h1>
+    <h1 class="text-center" th:text="${title}"></h1>
     <form method="post" class="container-fluid pt-4">
 
         <div class="form-group row justify-content-center">
