--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -10,7 +10,32 @@
 
     <title>Document</title>
 </head>
+<body>
+<div th:fragment="nav-bar" class="navbar navbar-expand-lg navbar-dark">
+<!--    <nav class="navbar navbar-expand-lg navbar-dark">-->
+<!--        <a href="@{/login}" class="navbar-brand">-->
+<!--            Home-->
+<!--        </a>-->
+    <div class="container">
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/login}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/tasks/create}">Create Tasks</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/tasklist/generator}">Tasklist Generator</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/tasklist}">My Tasklist</a>
+            </li>
+        </ul>
+    </div>
+</div>
 
-
-
+<th:block th:fragment="header">
+    <h1 th:text="${title}"></h1>
+</th:block>
+</body>
 </html>
