--- a/src/main/resources/templates/tasklist/generator.html
+++ b/src/main/resources/templates/tasklist/generator.html
@@ -1,15 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<head th:replace="fragments :: head"></head>
+<header th:replace="fragments::header"></header>
 <body>
-
-<header th:replace="fragments :: header"></header>
-
 <form method="post">
     <label>How many minutes:
         <input type="number" name="timeAvailable">
