conflicts solved and code cleaned after

--- a/src/main/resources/templates/tasklist/generator.html
+++ b/src/main/resources/templates/tasklist/generator.html
@@ -1,16 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<<<<<<< HEAD
-<header th:replace="fragments::header"></header>
+<header th:replace="fragments::navbar"></header>
 <body>
-=======
-<body>
-<div th:replace="fragments :: nav-bar"></div>
-
-<header th:replace="fragments :: header"></header>
-
->>>>>>> main
 <form method="post">
     <label>How many minutes:
         <input type="number" name="timeAvailable">
