--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<<<<<<< HEAD
-<header th:replace="fragments::header"></header>
+
+<header th:replace="fragments::navbar"></header>
+
 <body>
-=======
-<body>
-<div th:replace="fragments :: nav-bar"></div>
-
-<header th:replace="fragments :: header"></header>
-
-
-
->>>>>>> main
 <table>
     <tr>
         <th colspan="3">Task name</th>
