--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,31 +13,8 @@
     <title>Document</title>
 </head>
 <body>
-<div th:fragment="nav-bar" class="navbar navbar-expand-lg navbar-dark">
-<!--    <nav class="navbar navbar-expand-lg navbar-dark">-->
-<!--        <a href="@{/login}" class="navbar-brand">-->
-<!--            Home-->
-<!--        </a>-->
-    <div class="container">
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/login}">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/tasks/create}">Create Tasks</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/tasklist/generator}">Tasklist Generator</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/tasklist}">My Tasklist</a>
-            </li>
-        </ul>
-    </div>
-</div>
 
-
-<header th:fragment="header">
+<header th:fragment="navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Life Organizer</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
