--- a/src/main/resources/templates/tasklist/list.html
+++ b/src/main/resources/templates/tasklist/list.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-<<<<<<< HEAD
-<header th:replace="fragments::header"></header>
+<header th:replace="fragments::navbar"></header>
 <body>
-=======
-<body>
-<div th:replace="fragments :: nav-bar"></div>
 
-<header th:replace="fragments :: header"></header>
-
->>>>>>> main
 <table>
     <tr>
         <th colspan="2">Task name</th>
