name for navigation bar fragment changed to "navbar", Sign out under profile working.

--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
-
-<header th:replace="fragments::navbar"></header>
+<nav th:replace="fragments::navbar"></nav>
 
 <body>
 <table>
