--- a/src/main/resources/templates/tasklist/index.html
+++ b/src/main/resources/templates/tasklist/index.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments :: head"></head>
 <body>
 <div th:replace="fragments :: nav-bar"></div>
-<header th:replace="fragments :: navbar"></header>
+<nav th:replace="fragments::navbar"></nav>
 
 <div class="col">
     <h2>Selected Tasks</h2>
