fixed spelling for tasklist section

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -51,8 +51,8 @@
                     Task List
                 </a>
                 <div class="dropdown-menu" aria-labelledby="taskListDropdown">
-                    <a class="dropdown-item" th:href="@{/taskslist/generator}">Create</a>
-                    <a class="dropdown-item" th:href="@{/taskslist/list}">View all</a>
+                    <a class="dropdown-item" th:href="@{/tasklist/generator}">Create</a>
+                    <a class="dropdown-item" th:href="@{/tasklist/list}">View all</a>
                 </div>
             </li>
 
