Corrected some coding in the html tag.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body>
 <section class="align-content-center mt-4">
-    <h1 class="text-center">Log in</h1>
+    <h1 class="text-center">Login</h1>
     <form method="post" class="container-fluid pt-4">
         <div class="form-group row justify-content-center">
             <div class="col-sm-4 ">
