--- a/src/main/resources/templates/profile/options.html
+++ b/src/main/resources/templates/profile/options.html
@@ -5,7 +5,12 @@
 <nav th:replace="fragments::navbar"></nav>
 <section class="align-content-center mt-4">
     <h1 class="text-center" th:text="${title}"></h1>
+    <h5 class="text-center" th:text="${msg}"></h5>
     <form method="post" class="container-fluid pt-4">
+        <input type="hidden" th:value="${optionFormDTO.userName}" name="userName">
+        <input type="hidden" th:value="${optionFormDTO.firstName}" name="firstName">
+        <input type="hidden" th:value="${optionFormDTO.lastName}" name="lastName">
+        <input type="hidden" th:value="${optionFormDTO.email}" name="email">
 
         <div class="form-group row justify-content-center">
             <div class="col-sm-4 ">
@@ -31,9 +36,9 @@
             <div class="col-sm-4 ">
                 <div class="row">
                     <label class="col-4">Repeat Password:</label>
-                    <input type="password" class="form-control col-8" th:field="${optionFormDTO.verifyPass}">
+                    <input type="password" class="form-control col-8" th:field="${optionFormDTO.verifyPassword}">
                 </div>
-                <span th:errors="${optionFormDTO.verifyPass}" class="row text-danger justify-content-end "></span>
+                <span th:errors="${optionFormDTO.verifyPassword}" class="row text-danger justify-content-end "></span>
             </div>
         </div>
 
