Reworked the links that go to options.html.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -64,7 +64,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="profileDropdown">
                     <a class="dropdown-item" th:href="@{/profile}">View</a>
-                    <a class="dropdown-item" href="/profile/options">Options</a>
+                    <a class="dropdown-item" th:href="@{/profile/options}">Options</a>
                     <a class="dropdown-item" th:href="@{/logout}">Sign out</a>
                 </div>
             </li>
