--- a/src/main/resources/templates/profile/index.html
+++ b/src/main/resources/templates/profile/index.html
@@ -9,7 +9,7 @@
         <tr><th>User name</th><td th:text="${user.userName}"></td></tr>
         <tr><th>Name</th><td th:text="${user.firstName}+' '+${user.lastName}"></td></tr>
         <tr><th>Email</th><td th:text="${user.email}"></td></tr>
-        <tr><td><a th:href="@{tasks/create}" th:text="Settings"></a></td></tr>
+        <tr><td><a th:href="@{profile/options}" th:text="Settings"></a></td></tr>
     </table>
 </div>
 <div>
