As a user, when I am creating a list, I am only shown tasks that I created as options
- At the model level, the Task/TaskList relationship should be many-to-many. Both sides of this relationship need to be set up.
- Tasks that are already in a list should not be displayed as options.

--- a/src/main/resources/templates/tasklist/suggested.html
+++ b/src/main/resources/templates/tasklist/suggested.html
@@ -4,9 +4,9 @@
 <body>
 <nav th:replace="fragments::navbar"></nav>
 <div class="container">
-    <div class="row">
-        <div class="col">
-            <form method="post" action="/tasklist/create">
+    <form method="post" action="/tasklist/create">
+        <div class="row">
+            <div class="col">
                 <div>
                     <h2>Suggested Tasks</h2>
                     <ul class="list-group" th:if="${suggestedTasks}">
@@ -30,13 +30,15 @@
                     </ul>
                 </div>
                 <button class="btn-primary btn">Submit</button>
-            </form>
 
+            </div>
+            <div class="col">
+                <label>Tasklist Name:
+                    <input type="text" name="name">
+                </label>
+            </div>
         </div>
-        <div class="col">
-
-        </div>
-    </div>
+    </form>
 </div>
 
 </body>
