--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -2,79 +2,150 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:replace="fragments :: head"></head>
 <body>
-<section class="align-content-center mt-4">
-    <h1 class="text-center" th:text="${title}"></h1>
-    <form method="post" class="container-fluid pt-4">
 
-        <div class="form-group row justify-content-center">
-            <div class="col-sm-4 ">
-                <div class="row">
-                    <label class="col-3">Username:</label>
-                    <input type="text" class="form-control col-9" th:field="${signupFormDTO.userName}">
+<section class="vh-100 register-section">
+    <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                <div class="card login-register-card text-white shadow-lg" style="border-radius: 1rem;">
+                    <div class="card-body p-8 text-center">
+                        <div class="mb-md-5 mt-4 ">
+                            <h2 class="fw-bold mb-4 text-uppercase">CREATE AN ACCOUNT</h2>
+                            <form method="post">
+                                <div class="form-outline  form-white mb-2">
+                                    <input autocomplete="off" type="text" id="username"
+                                           class="form-control form-control-lg"
+                                           th:field="${signupFormDTO.userName}"/>
+                                    <label class="form-label" for="username">Username</label>
+                                    <div class="form-notch">
+                                        <div class="form-notch-leading" style="width: 9px;"></div>
+                                        <div class="form-notch-middle" style="width: 65px;"></div>
+                                        <div class="form-notch-trailing"></div>
+                                    </div>
+                                </div>
+                                <div class="justify-content-end mb-1">
+                                    <span th:errors="${signupFormDTO.userName}"
+                                          class="error_span text-warning "></span>
+                                </div>
+
+
+                                <div class="form-outline  form-white mb-2">
+                                    <input type="text" id="firstname" class="form-control form-control-lg"
+                                           th:field="${signupFormDTO.firstName}"/>
+                                    <label class="form-label" for="firstname">First name</label>
+                                    <div class="form-notch">
+                                        <div class="form-notch-leading" style="width: 9px;"></div>
+                                        <div class="form-notch-middle" style="width: 66px;"></div>
+                                        <div class="form-notch-trailing"></div>
+                                    </div>
+                                </div>
+                                <div class=" mb-1  justify-content-end ">
+                                    <span th:errors="${signupFormDTO.firstName}"
+                                          class="error_span text-warning"></span>
+                                </div>
+
+
+                                <div class="form-outline  form-white mb-2">
+                                    <input type="text" id="lastName" class="form-control form-control-lg"
+                                           th:field="${signupFormDTO.lastName}"/>
+                                    <label class="form-label" for="lastName">Last name</label>
+                                    <div class="form-notch">
+                                        <div class="form-notch-leading" style="width: 9px;"></div>
+                                        <div class="form-notch-middle" style="width: 66px;"></div>
+                                        <div class="form-notch-trailing"></div>
+                                    </div>
+                                </div>
+                                <div class="form-outline  mb-1  justify-content-end ">
+                                    <span th:errors="${signupFormDTO.lastName}"
+                                          class="error_span text-warning"></span>
+                                </div>
+
+
+                                <div class="form-outline  form-white mb-2">
+                                    <input type="email" id="email" class="form-control form-control-lg"
+                                           th:field="${signupFormDTO.email}"/>
+                                    <label class="form-label" for="email">Email</label>
+                                    <div class="form-notch">
+                                        <div class="form-notch-leading" style="width: 9px;"></div>
+                                        <div class="form-notch-middle" style="width: 40px;"></div>
+                                        <div class="form-notch-trailing"></div>
+                                    </div>
+                                </div>
+                                <div class="form-outline  mb-1  justify-content-end ">
+                                    <span th:errors="${signupFormDTO.email}"
+                                          class="error_span text-warning"></span>
+                                </div>
+
+
+                                <div class="form-outline form-white mb-2">
+                                    <input type="password" id="typePasswordX"
+                                           class="form-control form-control-lg "
+                                           th:field="${signupFormDTO.pwdHash}"/>
+                                    <label class="form-label" for="typePasswordX">Password</label>
+                                    <div class="form-notch">
+                                        <div class="form-notch-leading" style="width: 9px;"></div>
+                                        <div class="form-notch-middle" style="width: 62px;"></div>
+                                        <div class="form-notch-trailing"></div>
+                                    </div>
+                                </div>
+                                <div class="form-outline  mb-1">
+                                    <span th:errors="${signupFormDTO.pwdHash}"
+                                          class="error_span text-warning justify-content-end "></span>
+                                </div>
+
+
+                                <div class="form-outline form-white mb-2">
+                                    <input type="password" id="verifyPassword"
+                                           class="form-control form-control-lg "
+                                           th:field="${signupFormDTO.verifyPassword}"/>
+                                    <label class="form-label" for="verifyPassword">Repeat Password</label>
+                                    <div class="form-notch">
+                                        <div class="form-notch-leading" style="width: 9px;"></div>
+                                        <div class="form-notch-middle" style="width: 110px;"></div>
+                                        <div class="form-notch-trailing"></div>
+                                    </div>
+                                </div>
+                                <div class="form-outline  mb-1">
+                                    <span th:errors="${signupFormDTO.verifyPassword}"
+                                          class="error_span text-warning justify-content-end "></span>
+                                </div>
+
+                                <button class="btn btn-outline-light btn-sm px-5" type="submit">Create account</button>
+                            </form>
+                        </div>
+                        <div>
+                            <p class="mb-0">Have already an account? <a th:href="@{sigin}"
+                                                                        class="text-white-50 fw-bold">Login
+                                Here</a></p>
+                        </div>
+                    </div>
                 </div>
-                <span th:errors="${signupFormDTO.userName}" class="row text-danger justify-content-end "></span>
             </div>
         </div>
-
-        <div class="form-group row justify-content-center">
-            <div class="col-sm-4 ">
-                <div class="row">
-                    <label class="col-3">First Name:</label>
-                    <input type="text" class="form-control col-9" th:field="${signupFormDTO.firstName}">
-                </div>
-                <span th:errors="${signupFormDTO.firstName}" class="row text-danger justify-content-end "></span>
-
-            </div>
-        </div>
-
-        <div class="form-group row justify-content-center">
-            <div class="col-sm-4 ">
-                <div class="row">
-                    <label class="col-3">Last Name:</label>
-                    <input type="text" class="form-control col-9" th:field="${signupFormDTO.lastName}">
-                </div>
-                <span th:errors="${signupFormDTO.lastName}" class="row text-danger justify-content-end "></span>
-            </div>
-        </div>
-
-        <div class="form-group row justify-content-center">
-            <div class="col-sm-4 ">
-                <div class="row">
-                    <label class="col-3">Email:</label>
-                    <input type="text" class="form-control col-9" th:field="${signupFormDTO.email}">
-                </div>
-                <span th:errors="${signupFormDTO.email}" class="row text-danger justify-content-end "></span>
-            </div>
-        </div>
-
-        <div class="form-group row justify-content-center">
-            <div class="col-sm-4 ">
-                <div class="row">
-                    <label class="col-3">Password:</label>
-                    <input type="password" class="form-control col-9" th:field="${signupFormDTO.pwdHash}">
-                </div>
-                <span th:errors="${signupFormDTO.pwdHash}" class="row text-danger justify-content-end "></span>
-            </div>
-        </div>
-
-        <div class="form-group row justify-content-center">
-            <div class="col-sm-4 ">
-                <div class="row">
-                    <label class="col-4">Repeat Password:</label>
-                    <input type="password" class="form-control col-8" th:field="${signupFormDTO.verifyPassword}">
-                </div>
-                <span th:errors="${signupFormDTO.verifyPassword}" class="row text-danger justify-content-end "></span>
-            </div>
-        </div>
+    </div>
 
 
+    <script>
+        const inputs = document.querySelectorAll("input");
 
-        <div class="row form-group justify-content-center">
-            <input class="btn btn-success" type="submit" value="Create Account"/>
-        </div>
+        inputs.forEach(el => {
+            el.addEventListener('blur', e => {
+                if (e.target.value) {
+                    e.target.classList.add('active');
+                } else {
+                    e.target.classList.remove('active')
+                }
+            })
+        });
 
-    </form>
-
+        inputs.forEach(e => {
+            if (e.value) {
+                e.classList.add('active');
+            }
+        });
+    </script>
 </section>
+
+
 </body>
 </html>
