--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -23,7 +23,7 @@
                                     <th scope="col"></th>
                                 </tr>
                                 </thead>
-
+                                <tbody>
                                 <tr th:each="task : ${tasks}">
                                     <td>
                                         <span th:if="${task.isComplete}" style="text-decoration: line-through"><a
@@ -39,46 +39,14 @@
                                         </form>
                                     </td>
                                 </tr>
-
-                                <tr th:each="task : ${tasks}">
-                                    <td>
-                                        <span th:if="${task.isComplete}" style="text-decoration: line-through"><a
-                                                th:href="${'/tasks/'+ task.id}" th:text="${task.name}"></a></span>
-                                        <span th:unless="${task.isComplete}"><a th:href="${'/tasks/'+ task.id}"
-                                                                                th:text="${task.name}"></a></span>
-                                    </td>
-                                    <td th:text="${task.timeRequired}"></td>
-                                    <td>
-                                        <form method="post" action="/tasks/delete">
-                                            <input type="hidden" name="id" th:value="${task.id}">
-                                            <button class="btn btn-sm btn-outline-danger">Delete</button>
-                                        </form>
-                                    </td>
-                                </tr>
-
-                                <tr th:each="task : ${tasks}">
-                                    <td>
-                                        <span th:if="${task.isComplete}" style="text-decoration: line-through"><a
-                                                th:href="${'/tasks/'+ task.id}" th:text="${task.name}"></a></span>
-                                        <span th:unless="${task.isComplete}"><a th:href="${'/tasks/'+ task.id}"
-                                                                                th:text="${task.name}"></a></span>
-                                    </td>
-                                    <td th:text="${task.timeRequired}"></td>
-                                    <td>
-                                        <form method="post" action="/tasks/delete">
-                                            <input type="hidden" name="id" th:value="${task.id}">
-                                            <button class="btn btn-sm btn-outline-danger">Delete</button>
-                                        </form>
-                                    </td>
-                                </tr>
-
-
 
                                 </tbody>
                             </table>
                         </div>
                     </div>
-                    <a class="pb-1" th:href="@{/tasks/create}"><button th:href="@{/tasks/create}" class="btn btn-sm btn-outline-success">New task</button></a>
+                    <a class="pb-1" th:href="@{/tasks/create}">
+                        <button th:href="@{/tasks/create}" class="btn btn-sm btn-outline-success">New task</button>
+                    </a>
 
                 </div>
             </div>
