can create default tasks and convert to user task

--- a/src/main/resources/templates/tasks/default.html
+++ b/src/main/resources/templates/tasks/default.html
@@ -12,6 +12,12 @@
     <tr th:each="defaultTask : ${defaultTasks}">
         <td th:text="${defaultTask.name}"></td>
         <td th:text="${defaultTask.timeRequired}"></td>
+        <td>
+            <form method="post" action="/tasks/convert-default-task">
+                <input type="hidden" name="id" th:value="${defaultTask.id}">
+                <button>Add to my tasks</button>
+            </form>
+        </td>
     </tr>
 </table>
 </body>
