--- a/src/main/resources/templates/profile/options.html
+++ b/src/main/resources/templates/profile/options.html
@@ -7,45 +7,79 @@
     <h1 class="text-center" th:text="${title}"></h1>
     <p class="text-center text-success" th:text="${msg}"></p>
     <form method="post" class="container-fluid pt-4">
-        <input type="hidden" th:value="${optionFormDTO.userName}" name="userName">
-        <input type="hidden" th:value="${optionFormDTO.firstName}" name="firstName">
-        <input type="hidden" th:value="${optionFormDTO.lastName}" name="lastName">
-        <input type="hidden" th:value="${optionFormDTO.email}" name="email">
-
+        <h4>Username:</h4>
         <div class="form-group row justify-content-center">
             <div class="col-sm-4 ">
                 <div class="row">
-                    <label class="col-3">Password:</label>
+                    <label class="col-3">Username:</label>
+                    <input type="text" class="form-control col-9" th:field="${optionFormDTO.userName}">
+                </div>
+                <span th:errors="${optionFormDTO.userName}" class="row text-danger justify-content-end "></span>
+            </div>
+        </div>
+
+        <h4>Password</h4>
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">Current:</label>
                     <input type="password" class="form-control col-9" th:field="${optionFormDTO.pwdHash}">
                 </div>
                 <span th:errors="${optionFormDTO.pwdHash}" class="row text-danger justify-content-end "></span>
             </div>
         </div>
-
         <div class="form-group row justify-content-center">
             <div class="col-sm-4 ">
                 <div class="row">
-                    <label class="col-3">New Password:</label>
+                    <label class="col-3">New:</label>
                     <input type="password" class="form-control col-9" th:field="${optionFormDTO.newPassword}">
                 </div>
-                <span th:errors="${optionFormDTO.newPassword}" class="row text-danger justify-content-end "></span>
+                <span th:errors="${optionFormDTO.newPassword}" th:if="${optionFormDTO.newPassword}" class="row text-danger justify-content-end "></span>
             </div>
         </div>
-
         <div class="form-group row justify-content-center">
             <div class="col-sm-4 ">
                 <div class="row">
-                    <label class="col-4">Repeat Password:</label>
-                    <input type="password" class="form-control col-8" th:field="${optionFormDTO.verifyPassword}">
+                    <label class="col-3">Verify:</label>
+                    <input type="password" class="form-control col-9" th:field="${optionFormDTO.verifyPassword}">
                 </div>
                 <span th:errors="${optionFormDTO.verifyPassword}" class="row text-danger justify-content-end "></span>
             </div>
         </div>
 
+        <h4>Name</h4>
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">First:</label>
+                    <input type="text" class="form-control col-9" th:field="${optionFormDTO.firstName}">
+                </div>
+                <span th:errors="${optionFormDTO.firstName}" class="row text-danger justify-content-end "></span>
+            </div>
+        </div>
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">Last:</label>
+                    <input type="text" class="form-control col-9" th:field="${optionFormDTO.lastName}">
+                </div>
+                <span th:errors="${optionFormDTO.lastName}" class="row text-danger justify-content-end "></span>
+            </div>
+        </div>
 
+        <h4>Email</h4>
+        <div class="form-group row justify-content-center">
+            <div class="col-sm-4 ">
+                <div class="row">
+                    <label class="col-3">Email:</label>
+                    <input type="text" class="form-control col-9" th:field="${optionFormDTO.email}">
+                </div>
+                <span th:errors="${optionFormDTO.email}" class="row text-danger justify-content-end "></span>
+            </div>
+        </div>
 
         <div class="row form-group justify-content-center">
-            <input class="btn btn-success" type="submit" value="Change Password"/>
+            <input class="btn btn-success" type="submit" value="Change options"/>
         </div>
 
     </form>
