Fixes tasklist and tasks
- Define error in tasklistController
- Need to fix tasklist/index template (show tasklist name and the tasks inside of the tasklist)
- Need to check for zero or negative time for the generator on the backend, send an error
- Need to check for negative time for adding a new task on the backend, send an error

--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -10,8 +10,9 @@
     </label>
     <p th:errors="${task.name}"></p>
     <label>Time Required (optional):
-        <input type="number" th:field="${task.timeRequired}">
+        <input type="number" min="0" th:field="${task.timeRequired}">
     </label>
+    <p th:errors="${task.timeRequired}"></p>
     <button>Submit</button>
 </form>
 
