--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -52,7 +52,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="taskListDropdown">
                     <a class="dropdown-item" th:href="@{/tasklist/generator}">Create</a>
-                    <a class="dropdown-item" th:href="@{/tasklist/list}">View all</a>
+                    <a class="dropdown-item" th:href="@{/tasklist/}">View all</a>
                 </div>
             </li>
 
