--- a/src/main/resources/templates/tasklist/generator.html
+++ b/src/main/resources/templates/tasklist/generator.html
@@ -5,7 +5,7 @@
 <nav th:replace="fragments::navbar"></nav>
 <form method="post">
     <label>How many minutes:
-        <input type="number" name="timeAvailable">
+        <input type="number" name="timeAvailable" min="1" value="0">
     </label>
     <p th:if="error" th:text="${error}"></p>
     <button>Submit</button>
