--- a/src/main/resources/templates/tasklist/suggested.html
+++ b/src/main/resources/templates/tasklist/suggested.html
@@ -5,38 +5,36 @@
 <nav th:replace="fragments::navbar"></nav>
 <div class="container">
     <form method="post" action="/tasklist/create">
-        <div class="row">
-            <div class="col">
-                <div>
-                    <h2>Suggested Tasks</h2>
-                    <ul class="list-group" th:if="${suggestedTasks}">
-                        <li class="list-group-item" th:each="task : ${suggestedTasks}">
-                            <label>
-                                <input type="checkbox" name="taskIds" th:value="${task.id}">
-                                <span th:text="${task.name}"></span>
-                            </label>
-                        </li>
-                    </ul>
-                </div>
-                <div>
-                    <h2>All Tasks</h2>
-                    <ul class="list-group" th:if="${allTasks}">
-                        <li class="list-group-item" th:each="task : ${allTasks}">
-                            <label>
-                                <input type="checkbox" name="taskIds" th:value="${task.id}">
-                                <span th:text="${task.name}"></span>
-                            </label>
-                        </li>
-                    </ul>
-                </div>
-                <button class="btn-primary btn">Submit</button>
-
-            </div>
-            <div class="col">
-                <label>Tasklist Name:
-                    <input type="text" name="name">
-                </label>
-            </div>
+        <div>
+            <label>Tasklist Name:
+                <input type="text" name="name">
+            </label>
+        </div>
+        <div>
+            <h2>Suggested Tasks</h2>
+            <ul th:if="${suggestedTasks}">
+                <li th:each="task : ${suggestedTasks}">
+                    <label>
+                        <input type="checkbox" name="taskIds" th:value="${task.id}">
+                        <span th:text="${task.name}"></span>
+                    </label>
+                </li>
+            </ul>
+            <p th:if="${suggestedTasks} != true">No tasks suggested for your timeframe</p>
+        </div>
+        <div>
+            <h2>All available Tasks</h2>
+            <ul th:if="${allTasks}">
+                <li th:each="task : ${allTasks}">
+                    <label>
+                        <input type="checkbox" name="taskIds" th:value="${task.id}">
+                        <span th:text="${task.name}"></span>
+                    </label>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <button class="btn-primary btn">Submit</button>
         </div>
     </form>
 </div>
