--- a/src/main/resources/templates/tasks/index.html
+++ b/src/main/resources/templates/tasks/index.html
@@ -26,10 +26,11 @@
                                 <tbody>
                                 <tr th:each="task : ${tasks}">
                                     <td>
-                                        <span th:if="${task.isComplete}" style="text-decoration: line-through"><a
-                                                th:href="${'/tasks/'+ task.id}" th:text="${task.name}"></a></span>
-                                        <span th:unless="${task.isComplete}"><a th:href="${'/tasks/'+ task.id}"
-                                                                                th:text="${task.name}"></a></span>
+                                        <span th:replace="fragments :: displayTask"></span>
+<!--                                        <span th:if="${task.isComplete}" style="text-decoration: line-through"><a-->
+<!--                                                th:href="${'/tasks/'+ task.id}" th:text="${task.name}"></a></span>-->
+<!--                                        <span th:unless="${task.isComplete}"><a th:href="${'/tasks/'+ task.id}"-->
+<!--                                                                                th:text="${task.name}"></a></span>-->
                                     </td>
                                     <td th:text="${task.timeRequired}"></td>
                                     <td>
