Added fragments to display a task, a link with the task, time required for a task. Fixed TaskController to display a message if there is no tasks can fit in the available time.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -71,6 +71,9 @@
     </div>
 </nav>
 
-<span th:fragment="displayTask"><a th:href="@{/tasks/${task.getId()}}" th:text="${task.name}" th:class="${task.isComplete}? 'text-decoration-line-through'"></a> <span th:text="|(${task.timeRequired} minutes)|"></span></span>
+<a th:fragment="displayTaskWithLink" th:href="|/tasks/${task.id}|" th:text="${task.name}" th:class="${task.isComplete}? 'text-decoration-line-through'"></a>
+<span th:fragment="displayTask" th:text="${task.name}"></span>
+
+<span th:fragment="displayRequiredTime" th:text="|(${task.timeRequired} minutes)|"></span>
 </body>
 </html>
