--- a/src/main/resources/templates/tasklist/index.html
+++ b/src/main/resources/templates/tasklist/index.html
@@ -9,7 +9,9 @@
     <div th:each="tasklist : ${tasklists}">
         <h2><a th:href="${tasklist.id}" th:text="${tasklist.name}"></a></h2>
         <ul>
-            <li th:each="task :${tasklist.getTasks()}" th:text="${task.name + ' ' + '(' + task.timeRequired + ' minutes)'}"></li>
+            <li th:each="task :${tasklist.getTasks()}">
+                <a th:replace="fragments :: displayTaskWithLink"></a> <span th:replace="fragments :: displayRequiredTime"></span>
+            </li>
         </ul>
     </div>
 </div>
