Added a column for the selectPriority fragment to go.

--- a/src/main/resources/templates/tasks/default-create.html
+++ b/src/main/resources/templates/tasks/default-create.html
@@ -13,6 +13,7 @@
     <label>Time Required (optional):
         <input type="number" th:field="${defaultTask.timeRequired}">
     </label>
+    <label>Priority (optional):<select th:replace="fragments :: selectPriority"></select></label>
     <button>Submit</button>
 </form>
 
