--- a/src/main/resources/templates/tasks/default.html
+++ b/src/main/resources/templates/tasks/default.html
@@ -12,6 +12,7 @@
     <tr th:each="defaultTask : ${defaultTasks}">
         <td th:text="${defaultTask.name}"></td>
         <td th:text="${defaultTask.timeRequired}"></td>
+        <td><select th:replace="fragments :: selectPriority"></select></td>
         <td>
             <form method="post" action="/tasks/convert-default-task">
                 <input type="hidden" name="id" th:value="${defaultTask.id}">
