--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -13,6 +13,10 @@
         <input type="number" min="0" th:field="${task.timeRequired}">
     </label>
     <p th:errors="${task.timeRequired}"></p>
+    <label>Priority (optional):
+        <select th:replace="fragments :: selectPriority"></select>
+    </label>
+    <p th:errors="${task.priority}"></p>
     <button>Submit</button>
 </form>
 
