required annotation added to the time field of new task

--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -35,7 +35,7 @@
 
                                 <div class="form-outline form-black mt-4 mb-0">
                                     <input type="number" min="0" id="time" class="form-control form-control-lg "
-                                           th:field="${task.timeRequired}"/>
+                                           th:field="${task.timeRequired}" required/>
                                     <label class="form-label" for="time">Time required</label>
                                     <div class="form-notch">
                                         <div class="form-notch-leading" style="width: 9px;"></div>
