added link for user to add default task

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -39,6 +39,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="taskDropdown">
                     <a class="dropdown-item" th:href="@{/tasks/create}">Create</a>
+                    <a class="dropdown-item" th:href="@{/tasks/default}">Add tasks from default</a>
                     <a class="dropdown-item" th:href="@{/tasks}">View all</a>
                 </div>
             </li>
