--- a/src/main/resources/templates/tasks/create.html
+++ b/src/main/resources/templates/tasks/create.html
@@ -6,7 +6,7 @@
 <nav th:replace="fragments::navbar"></nav>
 
 
-<section class="vh-100 logged-in-section  ">
+<section class=" logged-in-section  " style="height: 93vh">
     <div class="container py-5 h-100">
         <div class="row  justify-content-center align-items-center h-100">
             <div class="col-12 col-md-8 col-lg-6 col-xl-5">
